--- a/css/styles.css
+++ b/css/styles.css
@@ -208,7 +208,7 @@ section.repo-data {
 }
 
 
-.repo-list {
+#resourcesContainer { /*changed all .repo-list to #resourcesContainer*/
     width: 100%;
     display: flex;
     flex-wrap: wrap;
@@ -257,18 +257,18 @@ section.repo-data {
 
 
 
-.repo-list h3 {
+#resourcesContainer h3 {
     text-align: left;
     margin: 0;
     padding: 10px;
 }
 
-.repo-list h3:hover {
+#resourcesContainer h3:hover {
     background-color: #eee9ff;
     cursor: pointer;
 }
 
-.repo-list p {
+#resourcesContainer p {
     padding: 0em 0.5em;
     margin: 0.5em 0;
 }
@@ -292,6 +292,12 @@ button, .tag {
     margin: 5px;
     background: gold;
     box-shadow: none;
+  }
+
+
+  button:hover {
+    background: teal;
+
   }
 
   .tag {
@@ -349,7 +355,7 @@ button, .tag {
         text-align: left;
     }
 
-    .repo-list {
+    #resourcesContainer {
         justify-content: space-between;
     }
 
